2003-02-22  Bastien Nocera  <hadess@hadess.net>

	* src/gtk-playlist.c: (gtk_playlist_add_wmv): will need to see how to
	handle this properly
	* src/totem.c: (totem_action_set_mrl): small fixes

2003-02-22  Bastien Nocera  <hadess@hadess.net>

	* src/baconvideowidget-marshal.list: remove unused marshaller
	definition

2003-02-21  Bastien Nocera  <hadess@hadess.net>

	* README: updated
	* configure.in: added warnings
	* src/bacon-video-widget.c: (bacon_video_widget_class_init),
	(frame_output_cb), (load_audio_out_driver),
	(bacon_video_widget_realize), (bacon_video_widget_idle_signal),
	(xine_error), (bacon_video_widget_new), (bacon_video_widget_open),
	(bacon_video_widget_play):
	* src/bacon-video-widget.h:
	* src/totem-video-thumbnailer.c: (main):
	* src/totem.c: (totem_action_play), (totem_action_set_mrl),
	(totem_action_seek_relative), (commit_hide_skip_to),
	(on_error_event), (video_widget_create): more use of GError,
	plenty of code cleanup following, faster response to errors :)

2003-02-21  Bastien Nocera  <hadess@hadess.net>

	* src/bacon-video-widget.c: (xine_event),
	(bacon_video_widget_motion_notify),
	(bacon_video_widget_button_press),
	(bacon_video_widget_get_logo_mode),
	(bacon_video_widget_get_metadata_string),
	(bacon_video_widget_get_metadata_int),
	(bacon_video_widget_get_metadata_bool),
	(bacon_video_widget_can_get_frames),
	(bacon_video_widget_get_current_frame):
	* src/bacon-video-widget.h:
	* src/totem-preferences.c:
	* src/totem-preferences.h:
	* src/totem-private.h:
	* src/totem-video-thumbnailer.c: (save_pixbuf), (main):
	* src/totem.c: (totem_action_exit), (play_pause_set_label),
	(totem_action_play), (totem_action_play_media),
	(totem_action_stop), (totem_action_play_pause),
	(totem_action_fullscreen_toggle), (totem_action_fullscreen),
	(update_mrl_label), (totem_action_set_mrl),
	(totem_action_previous), (totem_action_next),
	(totem_action_seek_relative), (totem_action_volume_relative),